Debugged the styling issue with spacing and worked to get the cart functioning in local storage

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,9 +2,8 @@
 font-family: 'Montserrat', sans-serif;
 font-family: 'Oswald', sans-serif; 
 */
-​
-header {background: #fffae8; border-top: solid 10px #f8cf00;}
-header .nav-items { 
+.header {background: #fffae8; border-top: solid 10px #f8cf00;}
+.header .nav-items { 
     text-align: center; 
     margin: 15px 10px 20px 10px;
     padding: 10px 5px 20px 5px;
@@ -12,18 +11,15 @@ header .nav-items {
     font-weight: 500;
     font-size: 20px;
 }
-header .nav-items a {  color: black; font-weight: 400; }
-header .nav-items a:hover { opacity: .7;}
-header .nav-items span {  color: #f8cf00; }
+.header .nav-items a {  color: black; font-weight: 400; }
+.header .nav-items a:hover { opacity: .7;}
+.header .nav-items span {  color: #f8cf00; }
 
 .row {
     text-align: center;
 }
-​
 .logo { font-family: 'Oswald', sans-serif; font-weight: 700;  font-size: 40px; color: black; padding: 20px; }
-​
 .cart {position: absolute; top: 0px; right: 10px; font-weight: 700; font-family: 'Oswald', sans-serif; font-size: 20px; color: black; padding: 20px;}
-​
 .container { text-align: center; margin-top: 20px; margin: auto; align-items: center; font-family: 'Montserrat', sans-serif; text-transform: lowercase;}
 .container hr { margin-top: 30px; height: 2px; background-color: #f8cf00; border: none;}
 .container .button {
@@ -37,22 +33,22 @@ header .nav-items span {  color: #f8cf00; }
     color: black;
 }
 .container .button:hover { box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2); }
-​
 .modal.modal-fixed-footer {
     padding: 0;
-    height: 250px;
+    height: 300px;
     width: 20%;
     min-width: 300px;
+    margin-bottom: 20px;
 }
-​
+.modal .modal-footer {
+    height: auto;
+}
 .modal-content h4 {text-align: left; font-family: 'Oswald', sans-serif; font-weight: 700; text-transform: lowercase;}
 .modal-content .food-type {text-align: left; color: black;  font-size: 18px; margin-top: -15px; text-transform: lowercase;}
 .modal-content h5 {text-align: left; font-family: 'Oswald', sans-serif; font-weight: 700; font-size: 30px;}
-​
 .modal-footer .to-cart { background: #f8cf00; text-transform: capitalize; }
 .modal-footer .modal-close { background: #fffae8; color: black; text-transform: capitalize; }
 .modal-footer .to-cart:hover { box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2); }
-​
 .grapes {background: #ede7f6;} 
 .melon {background: #f9fbe7;}
 .watermelon {background: #fce4ec;}
@@ -72,7 +68,6 @@ header .nav-items span {  color: #f8cf00; }
 .tomato {background: #ffebee;}
 .olive {display: none;}
 .coconut {background: #fafafa;}
-​
 .avocado {background: #e8f5e9;}
 .eggplant {background: #ede7f6;}
 .potato {background: #fff3e0;}
@@ -88,7 +83,6 @@ header .nav-items span {  color: #f8cf00; }
 .mushroom {background: #ffebee;}
 .peanuts {background: #efebe9;}
 .chestnut {background: #efebe9;}
-​
 .bread {background: #efebe9;}
 .croissant {background: #efebe9;}
 .baguettebread {background: #efebe9;}
@@ -141,13 +135,11 @@ header .nav-items span {  color: #f8cf00; }
 .dumpling {background: #fffde7;}
 .fortunecookie {background: #efebe9;}
 .takeoutbox {background: #fafafa;}
-​
 .crab {background: #ffebee;}
 .lobster {background: #ffebee;}
 .shrimp {background: #fff8e1;}
 .squid {background: #eceff1;}
 .oyster {background: #fafafa;}
-​
 .softicecream {background: #fafafa;}
 .shavedice {background: #ffebee;}
 .icecream {background: #fffde7;}
@@ -162,7 +154,6 @@ header .nav-items span {  color: #f8cf00; }
 .lollipop {background: #e0f7fa;}
 .custard {background: #fffde7;}
 .honeypot {background: #fffde7;}
-​
 .babybottle {background: #fafafa;}
 .glassofmilk {background: #fafafa;}
 .hotbeverage {background: #efebe9;}
